# FASTA_new

./: CMakeLists.txt  README.md  input.fasta  input2.fasta  main  main.cpp  output.fasta  output_2.fasta  output_3.fasta  syntax_basis  syntax_basis.cpp  test  test.cpp
Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  fasta
_trash/: Nucleotide.cpp
include/: Fasta.h  FastaFile.h  Header.h  Helper.h  Nucleotide.h  Sequence.h
lib/: Fasta.cpp  FastaFile.cpp  Header.cpp  Helper.cpp  Nucleotide.cpp  Sequence.cpp
src/: Fasta.cpp  main  main.cpp
